--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "herman"
-description = "A daemon that watches folders and organises them automatically."
+author = "Sean Urgel"
+description = "A rusty daemon that watches folders and organises them automatically."
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.3.19", features = ["derive"] }
 notify = "6.0.1"
