--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ author = "Sean Urgel"
 description = "A rusty daemon that watches folders and organises them automatically."
 version = "0.1.0"
 edition = "2021"
-keywords = ["scripting", "filesystem"]
+keywords = ["cli", "scripting", "filesystem"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
