--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,11 @@
 name = "herman"
 author = "SeanningTatum"
 description = "A rusty daemon that watches folders and organises them automatically."
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 license = "MIT"
 keywords = ["cli", "scripting", "filesystem"]
+repository = "https://github.com/SeanningTatum/herman"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
